--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@
       overflow-x: hidden;
       padding: auto;
       width: auto;
-      height: 5900px;
+      height: 8200px;
       background: linear-gradient(45deg, #000000, #141414, #1C1919, #191716);
     }
 
@@ -74,7 +74,7 @@
     position: absolute;
     top: 20px;
     right: 20px;
-    height: 93%;
+    height: 90%;
     width: calc(100% - 40px);
     overflow-y: hidden;
     display: flex;
@@ -90,9 +90,9 @@
     overflow-x: hidden;
     position: absolute;
     top: 945px;
-    right: 60px;
     height: 10px;
-    width: calc(100% - 160px);
+    right: 10%;
+    width: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center; 
@@ -103,9 +103,9 @@
     overflow-x: hidden;
     position: absolute;
     top: 1815px;
-    right: 60px;
     height: 10px;
-    width: calc(100% - 160px);
+    right: 10%;
+    width: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center; 
@@ -116,9 +116,9 @@
     overflow-x: hidden;
     position: absolute;
     top: 3115px;
-    right: 60px;
     height: 10px;
-    width: calc(100% - 160px);
+    right: 10%;
+    width: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center; 
@@ -129,9 +129,9 @@
     overflow-x: hidden;
     position: absolute;
     top: 4075px;
-    right: 60px;
     height: 10px;
-    width: calc(100% - 160px);
+    right: 10%;
+    width: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center; 
@@ -142,27 +142,55 @@
     overflow-x: hidden;
     position: absolute;
     top: 5075px;
-    right: 60px;
     height: 10px;
-    width: calc(100% - 160px);
+    right: 10%;
+    width: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center; 
     background-color: white;
   }
+
+  .linie_5{
+    overflow-x: hidden;
+    position: absolute;
+    top: 5775px;
+    height: 10px;
+    right: 10%;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    background-color: white;
+  }
+
+  .linie_6{
+    overflow-x: hidden;
+    position: absolute;
+    top: 6725px;
+    height: 10px;
+    right: 20%;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+  }
+
+  .text1_box{
+    position: absolute;
+    top: 1120px;
+
+  }
   
   .Project_Head_1{
-    position: absolute;
-    top: 1150px;
     right: 16%;
     margin: 10px;
     overflow-x: hidden;
     position: absolute;
-    font-size: 2.5rem;
+    font-size: 2.5vw;
     color: #ffffff;
 
   }
-
 
   .Project_box_1{
     overflow-x: hidden;
@@ -180,10 +208,9 @@
     color: rgba(255, 255, 255, 0);
     border-style: solid;
     border-color: hsl(0, 0%, 100%);
-    border-width: 10px;
-    
-   
+    border-width: 4%;
   }
+  vw
 
 .video3{
     position: relative;
@@ -191,24 +218,25 @@
 }
 
   .Project_Text_1{
-    position: absolute;
-    top: 1300px;
-    margin-left: 53%;
+    margin-top: 10%;
+    margin-left: 57%;
     color: white;
-    width: 490px;
+    width: 28%;
     height: 330px;
-    text-align: justify;
+    display: flex;
+    justify-content: center;
+    font-family: Tahoma, sans-serif; 
+    font-size: 2.5vw;
   }
 
 
   .Project_Head_2{
     position: absolute;
     top: 1900px;
-    right: calc(50% - 220px);
-    margin: 10px;
+    margin-left: 40%;
     overflow-x: hidden;
     position: absolute;
-    font-size: 2.5rem;
+    font-size: 2.5vw;
     color: #ffffff;
 
   }
@@ -218,17 +246,15 @@
     overflow-x: hidden;
     padding-left: 50px;
     position: absolute;
-    top: 1950px;
-    right: calc(50% - 500px);
-    margin: 10px;
-    height: 550px;
-    width: 950px;
+    top: 1990px;
+    margin-left: 20%;
     border-radius: 8px;
     display:block;
     flex-direction: column;
     justify-content: center;
     color: rgba(255, 255, 255, 0); 
-
+    float: left;
+    margin-top: 5%;
 
   }
 
@@ -237,74 +263,81 @@
     right:30px;
 }
 
+.text2_box{
+  position: absolute;
+  top: 2520px;
+  width: 100%;
+  float: left;
+  margin-left: 10%;
+
+}
+
+.seperator{
+  float: left;
+  margin-left: 5%;
+}
+
 
 
 .Project_small_Head_2{
-    position: absolute;
-    top: 2555px;
-    right: calc(50% + 120px);
-    margin: 10px;
     overflow-x: hidden;
     position: absolute;
-    font-size: 2rem;
+    font-size: 2vw;
+    margin-left: 4%;
     color: #ffffff;
 
   }
 
   .Project_Text_2{
-    position: absolute;
-    top: 2650px;
-    right: calc(50% - 40px);
-    font-size: 1.8rem;
+    margin-top: 18%;
+    font-size: 1.8vw;
     color: white;
-    width: 490px;
     height: 330px;
     text-align: justify;
   }
 
 
   .container_Input_Data_Code{
-    position: absolute;
-    top: 2525px;
-    right: calc(50% - 1600px);
-    width: 1580px;
-    overflow:hidden;
-    display:block;
-    height: 660px;
+    border-radius: 8px;
+    color: rgba(255, 255, 255, 0); 
+    width: 60%;
+    float: left;
+    margin-left: 5%;
+    
 }
 
 
 .Project_Head_3{
-    position: absolute;
-    top: 3215px;
-    right: calc(50% - 180px);
-    margin: 10px;
+    margin-left: 40%;
     overflow-x: hidden;
     position: absolute;
-    font-size: 2.1rem;
+    font-size: 2.1vw;
     color: #ffffff;
 
   }
 
   .Project_Text_3{
-    position: absolute;
-    top: 3300px;
-    right: calc(50% - 315px);
-    font-size: 2rem;
+    margin-left: 37%;
+    margin-top: 6%;
+    font-size: 2vw;
     color: white;
-    width: 610px;
+    width: 30%;
     height: 330px;
-    text-align: justify;
+  }
+
+  .text3_box{
+    position: absolute;
+    top: 3220px;
+    width: 100%;
+  
   }
 
 
   .container_3{
-    position: absolute;
-    top: 3625px;
-    right: calc(50% - 860px);
-    width: 1280px;
-    display:block;
-    height: 700px;
+    margin-left: 15%;
+
+   
+    
 }
 
 .colormap_img{
@@ -313,13 +346,10 @@
 }
 
 .Project_small_Head_4_1{
-    position: absolute;
-    top: 4325px;
-    right: calc(50% - 425px);
-    margin: 10px;
+    margin-left: 71%;
+    margin-top: 10%;
     overflow-x: hidden;
-    position: absolute;
-    font-size: 1.7rem;
+    font-size: 1.7vw;
     color: #ffffff;
   }
 
@@ -327,23 +357,18 @@
 
 
   .Project_small_Head_4_2{
-    position: absolute;
-    top: 4645px;
-    right: calc(50% - 495px);
-    margin: 10px;
-    overflow-x: hidden;
-    position: absolute;
-    font-size: 1.7rem;
+    margin-left: 65%;
+    margin-top: 40%;
+    font-size: 1.7vw;
     color: #ffffff;
   }
 
 
 
   .Project_Text_4_1{
-    position: absolute;
-    top: 4420px;
-    right: calc(50% - 660px);
-    font-size: 1.4rem;
+    font-size: 1.4vw;
+    margin-left: 62%;
+    margin-top: 3%;
     color: white;
     width: 490px;
     height: 330px;
@@ -351,10 +376,9 @@
   }
 
   .Project_Text_4_2{
-    position: absolute;
-    top: 4725px;
-    right: calc(50% - 660px);
-    font-size: 1.4rem;
+    font-size: 1.4vw;
+    margin-left: 62%;
+    margin-top:3%;
     color: white;
     width: 490px;
     height: 330px;
@@ -365,9 +389,22 @@
   .container_4{
     position: absolute;
     top: 4125px;
-    right: calc(50% - 1050px);
-    width: 1580px;
+    margin-left: 10%;
+    width: 100%;
     height: 1000px;
+}
+
+.text4_box{
+  position: absolute;
+  top: 4070px;
+  width: 100%;
+
+}
+
+.text5_box{
+  position: absolute;
+  top: 4020px;
+  width: 100%;
 }
 
 
@@ -382,18 +419,84 @@
 .Project_Head_5{
     position: absolute;
     top: 5150px;
-    right: calc(50% - 220px);
+    right:  35%;
     margin: 10px;
     overflow-x: hidden;
-    position: absolute;
-    font-size: 2.5rem;
+    font-size: 2.5vw;
     color: #ffffff;
 
   }
 
+  .Project_Head_6{
+    position: absolute;
+    top: 5915px;
+    right:26%;
+    margin: 10px;
+    overflow-x: hidden;
+    position: absolute;
+    font-size: 2.1vw;
+    color: #ffffff;
+
+  }
+
+  .Project_Text_6{
+    position: absolute;
+    top: 6000px;
+    right: 35%;
+    font-size: 2vw;
+    color: white;
+    width: 27%;
+    height: 330px;
+    text-align: justify;
+  }
+
+  .container_webserver{
+    position: absolute;
+    top: 6225px;
+    width: 100%;
+    margin-left: 36%;
+    margin-top:5%;
+
+  }
+
+  .Project_Text_7{
+    position: absolute;
+    top: 6950px;
+    margin-left: 15%;
+    font-size: 1.8vw;
+    color: white;
+    width: 30%;
+    height: 330px;
+    text-align: justify;
+  }
+
+  .hardware_opt{
+    position: absolute;
+    top: 6950px;
+    margin-left: 50%;
+
+  }
+
+  .Project_Text_8{
+    position: absolute;
+    top: 7550px;
+    margin-left: 50%;
+    font-size: 1.8vw;
+    color: white;
+    width: 20%;
+    height: 330px;
+    text-align: justify;
+  }
+
+  .hardware_opt2{
+    position: absolute;
+    top: 7550px;
+    margin-left: 15%;
+  }
+
   .footer__container {
     background-color: #131313;
-    padding: 4rem 0;
+    padding: 4vw 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -406,7 +509,7 @@
     align-items: center;
     cursor: pointer;
     text-decoration: none;
-    font-size: 2rem;
+    font-size: 1.8vw;
   }
   
   .footer__links {
